--- a/src/index.css
+++ b/src/index.css
@@ -1,110 +1,98 @@
 body {
   margin: 0;
-   font-family: "Arvo","serif" !important ;
+  font-family: "Arvo", "serif" !important ;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family:'Georgia, 'Times New Roman', Times, serif'
+  font-family: "Georgia, " Times New Roman ", Times, serif";
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.lblTracker{
-font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
-font-style: normal;
-font-weight: bold;
-font-size: 22px;
-padding-top: 20px;
-color: #052F5F;
+.lblTracker {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", "Geneva", "Verdana", "sans-serif";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  padding-top: 20px;
+  color: #052f5f;
 }
 
-.Displaycard{
-  width: '18rem' !important;
-  padding-top: "20px" !important
+.Displaycard {
+  width: "18rem" !important;
+  padding-top: "20px" !important;
 }
 
-#buttonSearch{
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
-font-style: normal;
-font-weight: bold;
-font-size: 18px;
-line-height: 120%;
-color: #052F5F;
-width: 111px;
-height: 34px;
-border-radius: 10px;
+#buttonSearch {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", "Geneva", "Verdana", "sans-serif";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 120%;
+  color: #052f5f;
+  width: 111px;
+  height: 34px;
+  border-radius: 10px;
 }
-
-.btn-primary{
-  background-color:white !important;
-  color:#052F5F !important;
-}
-
-/* #cardHeaderActive{
-  color: "#FCFFFF" !important;
-  background-color:"#3D7085";
-  text-align:"center"
-} */
 
 .my-custom-scrollbar {
   position: relative;
   height: 150px;
   width: 1000px !important;
   overflow: auto;
-  }
-  .table-wrapper-scroll-y {
+}
+.table-wrapper-scroll-y {
   display: block;
-  }
+}
 
-.my-manager-scrollbar{
+.my-manager-scrollbar {
   position: relative;
   height: 350px !important;
   /* width: 980px !important; */
   overflow: auto;
 }
 
-  #btnDetails{
-    margin-top: 10px !important;
-      border-radius: 10px;
-  }
+#btnDetails {
+  margin-top: 10px !important;
+  border-radius: 10px;
+}
 
-  #btnUpdate{
-    margin-top: 10px !important;
-      border-radius: 10px;
-  }
+#btnUpdate {
+  margin-top: 10px !important;
+  border-radius: 10px;
+}
 
-  #buttonExport{
-    background-color: black;
-    border-radius: 10px;
-    color: white;
-    height: 30px;
-    width: 70px;
-    padding: 0;
-  }
+#buttonExport {
+  background-color: black;
+  border-radius: 10px;
+  color: white;
+  height: 30px;
+  width: 70px;
+  padding: 0;
+}
 
-  .recentScroll
-  {
-    height:700px;
+.recentScroll {
+  height: 700px;
   overflow-y: scroll;
-  }
+}
 
-  .scroll{
-    max-height: 300px;
-    overflow-y: auto;
-  }
+.scroll {
+  max-height: 300px;
+  overflow-y: auto;
+}
 
-  .my-conatiner{
-    background-color: "#F5F9FC" !important;
-     padding-left: "0px" !important ;
-     padding-right: "0px" !important;
-  }
+.my-conatiner {
+  background-color: "#F5F9FC" !important;
+  padding-left: "0px" !important ;
+  padding-right: "0px" !important;
+}
 
-  /* #btnJobInfo{
+/* #btnJobInfo{
     border:"0px" !important;
     background:"transparent" !important;
     
   } */
-  
- 
