--- a/src/StyleSheets/Modal.css
+++ b/src/StyleSheets/Modal.css
@@ -10,73 +10,70 @@
   }
   
   #modalHeader {
-    padding-top: 0px;
+    /* padding-top: 0px;
     margin-left: 0px;
     margin-top: 0px;
     width: 499px;
-    height: 90px;
+    height: 90px; */
     background: #fcffff;
     border: 1px solid #cccccc;
-    border-top: 0px;
-    border-left: 0px;
+    /* border-top: 0px;
+    border-left: 0px; */
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
   }
-  
-  .modalOptions {
-    position: absolute;
-    width: 120px;
-    height: 200px;
-    background: #fcffff;
-    border-right: 1px solid #cccccc;
-    box-sizing: border-box;
-    left: 14px;
-    top: 0px;
-    padding-left: 0px !important;
-    display: table;
-  }
-  
-  .modalOptionsRect {
-    position: absolute;
-    width: 120px;
-    height: 460px;
-    background: #fcffff;
-    border: 1px solid #cccccc;
-    box-sizing: border-box;
-    left: 14px;
-    top: 89px;
-    border-bottom-left-radius: 8px;
-    padding-left: 0px !important;
-    display: table;
-  }
-  
-  .modal-content {
-    position: absolute;
-    border: none !important;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    padding-top: 0px;
-  }
-  
+
   #xButton {
-    padding-top: 0px;
-    margin-left: 462px;
-    font-size: 1rem;
+    /* padding-top: 0px;
+    margin-left: 462px; */
+    font-size: 0.9rem;
     font-weight: 700;
     color: #000;
     border: none;
     text-shadow: 0 1px 0 #fff;
     background: #fcffff;
+    margin-right: 0 !important;
+    float: right;
+    padding: 0px;
+
+
   }
   
+  #modalTitleRow {
+    /* display: inline-flex !important; */
+     margin-bottom: 5px;
+     border: 1px solid #000
+  }
+
+  #logoCol {
+
+    /* margin-top: 12px !important;
+    padding-right:5px !important; */
+    /* text-align: right !important */
+  }
+
+
+   
+  #modalLogo {
+    height: 80%;
+    width: 80%
+  }
+  
+    
+  #titleCol {
+    /* margin-top: 15px !important;
+    padding-left: 0px !important; */
+ 
+  }
+
   .updateButton {
-    margin-left: 370px;
+    /* margin-left: 370px; */
     background-color: #e5b85f !important;
-    position: absolute;
+    /* position: absolute; */
     border-radius: 8px;
     font-family: "Arvo", serif;
-    width: 80px;
-    height: 45px;
+    /* width: 80px;
+    height: 45px; */
     background-color: #e5b85f;
     color: #fcffff !important;
     font-style: normal;
@@ -84,6 +81,44 @@
     font-weight: bold;
     text-align: center;
   }
+
+  .modalOptions {
+    /* position: absolute; */
+    /* width: 120px;
+    height: 200px; */
+    background: #fcffff;
+    border-right: 1px solid #cccccc;
+    box-sizing: border-box;
+    /* left: 14px;
+    top: 0px;
+    padding-left: 0px !important; */
+    display: table;
+  }
+  
+  .modalOptionsRect {
+    /* position: absolute; */
+    /* width: 120px;
+    height: 460px; */
+    background: #fcffff;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+    /* left: 14px;
+    top: 89px; */
+    border-bottom-left-radius: 8px;
+    /* padding-left: 0px !important; */
+    display: table;
+  }
+  
+  .modal-content {
+    /* position: absolute; */
+    border: none !important;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    /* padding-top: 0px; */
+  }
+  
+
+
 
   
   /* .btn {
@@ -106,10 +141,10 @@
   } */
 
   .sideOptions{
-    height: 35px;
-    width: 100px !important;
+    /* height: 35px; */
+    /* width: 100px !important; */
     border-bottom: 1px solid #cccccc !important;
-    left: 0px;
+    /* left: 0px; */
     padding-left: 0px !important;
     text-align: center;
     padding-right: 0px !important;
@@ -140,54 +175,42 @@
   
   .companyInfoCont {
     padding-right: 0px !important;
-    height: 458px
+    /* height: 458px */
   }
   
   .companyInfoRow {
     border-bottom-right-radius: 8px;
     padding-right: 0px !important;
-    margin-right: 0px !important;
-    margin-left: 88px !important;
-    width: 396px !important;
-    height: 458px
+    /* margin-right: 0px !important;
+    margin-left: 88px !important; */
+    /* width: 396px !important;
+    height: 458px */
   }
    
   .companyRoleDesc {
-    height: 159px;
-    width: 400px;
+    /* height: 159px;
+    width: 400px; */
     border-bottom-right-radius: 8px;
   }
   
-  #logoCol {
-    margin-top: 12px !important;
-    padding-right:5px !important;
-    text-align: right !important
-  }
-  
-  #titleCol {
-    margin-top: 15px !important;
-    padding-left: 0px !important;
- 
-  }
+
   
   #title {
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 20px !important;
+    /* margin-top: 10px */
+    /* display: block */
+  }
+
+  #colTitle{
+   
   }
   
-  #modalTitleRow {
-    width: 400px;
-    padding-left: 0px!important
-  }
-  
-  #modalLogo {
-    height: 30px !important;
-    width: 50px !important;
-  }
-  
+
+ 
   #vacancyTitle{
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
@@ -195,11 +218,11 @@
   }
   
   #companyInfoTitle{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #jobInfo{
@@ -209,28 +232,28 @@
   }
   
   #role{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #loco{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   
   #applicationTitle{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #applicationJobInfo{
@@ -245,7 +268,7 @@
   }
   
   #statusTitle{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
@@ -253,48 +276,48 @@
   }
   
   #appDateTitle{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #interviewDateTitle{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #replyDateTitle{
-    margin-top: 17px;
+    /* margin-top: 17px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #dateTime{
-    height: 25px;
-    width: 120px;
+    /* height: 25px;
+    width: 120px; */
     font-size: 10px;
-    padding: 0px
+    /* padding: 0px */
   }
   
   #companyRoleTitle{ 
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
   
   #companyRoleDesc{ 
     font-family: "Arvo", serif;
     color: #052f5f !important;
     font-size: 15px;
-    margin-bottom: 0px
+    /* margin-bottom: 0px */
   }
 
