--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -80,7 +80,7 @@
   background-color: #e5b85f;
   color: #052f5f !important;
   margin-top: 22px;
-  margin-left: 30px
+  padding-left: 13px
 }
 
 .colBtnSearch{
