--- a/src/StyleSheets/Modal.css
+++ b/src/StyleSheets/Modal.css
@@ -120,7 +120,7 @@
     padding-right: 0px !important;
   } */
 
-/* #jobInfoScreens::after {
+/* .row::after {
     content: "";
     clear: both;
     display: table;
@@ -132,11 +132,11 @@
 
 .colJobInfo {
   float: left;
-  /* padding: 15px; */
-  /* padding-left: 10px; */
   padding-top: 5px;
   padding-left: 2px
 }
+
+
 
 .colJobInfoTwo{
   padding-right: 0px
