--- a/src/StyleSheets/Notes.css
+++ b/src/StyleSheets/Notes.css
@@ -1,4 +1,4 @@
-.notesRow {
+/* .notesRow {
   height: 200px !important;
   width: 350px !important;
   margin-left: 120px !important;
@@ -8,6 +8,8 @@
   padding-left: 0px !important;
   border-radius: 8px;
 }
+
+
 
 .notesInputCol {
   width: 400px !important;
@@ -79,4 +81,29 @@
   top: 2px;
   position: absolute;
   display: inline-block !important;
+} */
+
+#colAddNotes{
+ padding-left: 20px;
+}
+
+.addNotes{
+  color: #8a7f7f;
+  font-size: 15px;
+  font-family: "Arvo", serif;
+  height: 110px !important
+}
+
+#rowAddNotes{
+  border: 1px solid #cccccc;
+  margin-left: 5px;
+  margin-right: 12px;
+  border-radius: 8px;
+  padding-top: 5px;
+  height: 120px
+}
+
+#colNotesAddButton{
+    padding-right: 20px;
+    text-align: right
 }
