--- a/src/StyleSheets/StudentDashboard.css
+++ b/src/StyleSheets/StudentDashboard.css
@@ -66,7 +66,7 @@
 }
 
 .form-control {
-  background-color: #fcffff;
+  /* background-color: #fcffff; */
   background-clip: padding-box;
   border: none;
   padding-left: 0px
